message_header: Fix message content visible above sticky header.
This was due to `box-shadow` used to hide the content was incorrectly
overridden in `.sticky_header` from the `.message_header` just above.

The bug is highly reproducible since it happens due to minor pixel
differences when rendering.

--- a/web/styles/message_header.css
+++ b/web/styles/message_header.css
@@ -161,7 +161,7 @@
         }
 
         &.sticky_header {
-            box-shadow: var(--unread-marker-left) 0 0 0 var(--color-background);
+            box-shadow: var(--unread-marker-left) -1px 0 0 var(--color-background);
 
             .recipient_row_date {
                 display: block;
